Chrome overflow fix

--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ h1, h2, h3, h4, h5, h6 { color: #333; font-weight: 600; -ms-word-wrap: break-wor
 .container { position: relative; margin: 0 auto; max-width: 1680px; }
 #page .container {  }
 .main { position: relative; }
-.main-inner { position: relative; min-height: 1100px; /* instead of sticky footer */ }
+.main-inner { position: relative; overflow-x: hidden; /* Chrome fix */ min-height: 1100px; /* instead of sticky footer */ }
 .content { width: 100%; position: relative; min-height: 800px; }
 .content-inner,
 .page-title-inner { margin: 0 auto; }
